Modification dans le CSS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,8 @@ body {
     justify-content: center;
     /* width: 100 ; */
     /* min-height: 100vh; */
-    background: rgb(0, 57, 104); 
+    background: rgb(151, 27, 95); 
+    /* background: rgb(0, 57, 104);  */
 }
 
 table {
