--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,3 @@
-
-
 tr {
     text-align: center;
 }
@@ -11,45 +9,78 @@ th {
 
 body {
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
     text-align: center;
     justify-content: center;
     /* width: 100 ; */
     /* min-height: 100vh; */
-    background: rgb(0, 57, 104); 
+    background: rgb(0, 57, 104);
 }
 
 table {
     width: 85%;
     color: rgb(240, 234, 234);
     margin: 0 auto;
+    margin-top: 5rem;
 }
-
 
 .drapeau {
-    border-radius: 50%;
-    width: 12%;
-    margin-right: 30px;
     display: flex;
     align-items: center;
+    border-radius: 50%;
+    width: 12%;
+    margin-right: 8px;
     justify-content: center;
 }
-.matchs{
+
+.matchs {
     width: 85%;
     display: flex;
     margin: 0 auto;
     justify-content: space-between;
     align-items: center;
     color: white;
-    
 }
-.equipe1, .equipe2{
+
+.equipe1, .equipe2 {
     display: flex;
-    align-items: center; 
+    align-items: center;
     justify-content: center;
     font-size: 1.5rem;
     font-weight: 500;
 }
-.vs{
-    width: 25%;
+
+.vs {
+    width: 15%;
+}
+
+.blockEquipe {
+    display: flex;
+    justify-content: space-around;
+}
+
+
+.scoreEquipe, .btnJouer {
+    width: 35px;
+    border-radius: .5rem;
+    outline: none;
+    border: none;
+    margin-right: 15px;
+}
+
+.btnJouer {
+    width: 45px;
+    border-radius: .5rem;
+    outline: none;
+    border: none;
+    background: rgb(127, 180, 216);
+}
+
+form div{
+    display: flex;
+}
+.drapeauEtNom{
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
