--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,12 @@
+*{
+    box-sizing: border-box;
+}
+
+img{
+    width: 100%;
+    /* height: 100%; */
+}
+
 tr {
     text-align: center;
 }
@@ -5,6 +14,7 @@ tr {
 th {
     text-align: center;
     background: rgb(127, 180, 216);
+    border-radius: .5rem;
 }
 
 body {
@@ -23,6 +33,16 @@ table {
     margin: 0 auto;
     margin-top: 5rem;
 }
+/* .img-table{
+    background-image: url('https://source.unsplash.com/1600x1080/?sport,soccer');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    filter: blur(50px);
+    -webkit-filter: blur(50px);
+    border-radius: .5rem;
+    height: 100%;
+} */
 
 .drapeau {
     display: flex;
@@ -78,6 +98,11 @@ table {
 
 form div{
     display: flex;
+}
+.btnReset{
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
 }
 .drapeauEtNom{
     display: flex;
